# itc1

./: .gitignore  2_recherche.ipynb  404.html  CONTRIBUTING.md  LICENSE  README.md  embed64.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  tp_parcoursup.ipynb
.github/workflows/: deploy.yml  site.yml
0_intro/: 0_jupyter.ipynb
0_intro/0_jupyter/: index.html
1_Python/: 0_variables.ipynb  1_fonctions.ipynb  2_boucles.ipynb  2_conditions.ipynb  3_boucles.ipynb  variables.ipynb
1_Python/0_variables/: index.html
1_Python/1_fonctions/: index.html
1_Python/2_conditions/: index.html
1_Python/3_boucles/: index.html
2_tp_semestre1/: 1_dictionnaire.ipynb  2_boucles_imbriquees.ipynb  3_module.ipynb  4_dichotomie.ipynb  5_recursivite.ipynb  6_fractales.ipynb  7_glouton.ipynb  9_tris.ipynb
2_tp_semestre1/10_mastermind/: index.html
2_tp_semestre1/1_dictionnaire/: index.html
2_tp_semestre1/2_boucles_imbriquees/: index.html
2_tp_semestre1/3_module/: index.html
2_tp_semestre1/4_dichotomie/: index.html
2_tp_semestre1/5_recursivite/: index.html
2_tp_semestre1/6_fractales/: index.html
2_tp_semestre1/7_glouton/: index.html
2_tp_semestre1/9_tris/: index.html
2_tp_semestre1/tp_parcoursup/: index.html
5_graph/4_dijkstra/: dijkstra_code.ipynb
5_graph/5_astar/: astar_code.ipynb
dm/: Dm1 Guedes Ribeiro.py  README.md  dm1.py  dm1.solennlelidec.py  dm2 td4,5 et 6
ds/DS2corrigé/: index.html
ds/ds2/: index.html
files/: 2_recherche.ipynb  README.md  tp_parcoursup.ipynb
itc/: _config.yml  _toc.yml  intro.md
site/: anim.html
(+123 files in other folders)
