[tool.poetry]
name = "itc1_2021"
version = "0.1.0"
description = ""
authors = ["Quentin Fortier <qpfortier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "3.1.7"
jupyterlite = "0.1.0a6"
theme-darcula = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
